--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-virtual-keyboard": "^1.0.2",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
